k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gionee-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    # This line wakes up Cert-Manager!
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  # This block tells Kubernetes to secure the domain using the requested cert
  tls:
    - hosts:
        - yourdomain.com # <-- YOUR DOMAIN HERE
      secretName: gionee-tls-cert
  rules:
    - host: brainorbit.in # <-- YOUR DOMAIN HERE
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gionee-service
                port:
                  number: 80
